WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78013
[chromium] Gracefully handle compositor initialization failure in single-threaded proxy
https://bugs.webkit.org/show_bug.cgi?id=78013
Summary
[chromium] Gracefully handle compositor initialization failure in single-thre...
James Robinson
Reported
2012-02-07 11:54:33 PST
[chromium] Gracefully handle compositor initialization failure in single-threaded proxy
Attachments
Patch
(4.99 KB, patch)
2012-02-07 11:55 PST
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(5.81 KB, patch)
2012-02-07 13:11 PST
,
James Robinson
kbr
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-02-07 11:55:37 PST
Created
attachment 125894
[details]
Patch
James Robinson
Comment 2
2012-02-07 13:11:24 PST
Created
attachment 125908
[details]
Patch
James Robinson
Comment 3
2012-02-07 13:11:33 PST
Fixed the threaded case too
Kenneth Russell
Comment 4
2012-02-07 13:28:58 PST
Comment on
attachment 125908
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=125908&action=review
Looks OK assuming it's been tested; one comment.
> Source/WebCore/platform/graphics/chromium/cc/CCLayerTreeHost.h:187 > + bool updateLayers();
Please document the semantics of the return value. Why do some of the early outs in updateLayers return true?
James Robinson
Comment 5
2012-02-07 13:51:21 PST
Committed
r106986
: <
http://trac.webkit.org/changeset/106986
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug