[chromium] Gracefully handle compositor initialization failure in single-threaded proxy https://bugs.webkit.org/show_bug.cgi?id=78013

Reviewed by Kenneth Russell.

If compositor initialization fails it's not safe to proceed through the rest of the frame process. This adds
some early outs.

Tested manually by forcing the first makeContextCurrent() call fail.

* platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
(WebCore::CCLayerTreeHost::updateLayers):
* platform/graphics/chromium/cc/CCLayerTreeHost.h:
(CCLayerTreeHost):
* platform/graphics/chromium/cc/CCSingleThreadProxy.cpp:
(WebCore::CCSingleThreadProxy::compositeAndReadback):
(WebCore::CCSingleThreadProxy::compositeImmediately):
(WebCore::CCSingleThreadProxy::commitIfNeeded):
* platform/graphics/chromium/cc/CCSingleThreadProxy.h:
(CCSingleThreadProxy):

Canonical link: https://commits.webkit.org/94902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106986 268f45cc-cd09-0410-ab3c-d52691b4dbfc